--- a/ToDoList/Api/ToDoList.Api.csproj
+++ b/ToDoList/Api/ToDoList.Api.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Infrastructure\ToDoList.Infrastructure.Database.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
